# Stock-Market-Project

./: .gitignore  Api_connetion.hpp  CMakeLists.txt  Demoapi.cpp  LICENSE  README.md  Stock_training.cpp  User_implementation.hpp  User_info.db  main  test  test.db  test.db-journal  test_api  test_sqlite  test_stock_sql
database/: User_info.db  test.db
include/: Api_connetion.hpp  User_implementation.hpp
